--- a/curriculum.html
+++ b/curriculum.html
@@ -35,7 +35,7 @@
 			}
 
 		</style>
-		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
