--- a/curriculum.html
+++ b/curriculum.html
@@ -35,7 +35,7 @@
 			}
 
 		</style>
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css"/>
 	</head>
 	<body class="is-preload">
 
@@ -64,7 +64,7 @@
 										</div>
 									</span>
 									<div id="intro">
-										<a href="#" class="logo"><img src="../images/logos/uavLOGO.png" alt="" /></a>
+										<a href="#" class="logo"><img src="images/logos/uavLOGO.png" alt="" /></a>
 									</div>
 								</header>
 								<p>
