Agregando el WAH

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 												</left>
 												<a href="subjects/subjMEDICION.html" class="author"><img src="images\logos\measureLOGO.png" alt="" /></a>
 											</header>
-											<a href="posts/INIT/INIT_EQ.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="posts/INIT/INIT_WAH.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
 										</article>
 
 									<!-- Mini Post -->
