--- a/subjects/subjAUDIO.html
+++ b/subjects/subjAUDIO.html
@@ -104,7 +104,7 @@
 								<div class="mini-posts">
 									<article class="mini-post">
 										<header>
-											<h3><a href="../posts/INIT/INIT_EQ.html">INIT EQ </a></h3>
+											<h3><a href="../posts/INIT/INIT_WAH.html">INIT Wah </a></h3>
 											<left>
 												<p>AUDIO</p>
 											</left>
