Arreglado el Wah

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									</div>
 								</header>
 								<div class="rounded-image">
-									<a href="../posts/INIT/INIT_series.html" class="image featured"><img src="posts/INIT/distortionCONT/INIT_DIST_RENDER.png" alt="" /></a>
+									<a href="posts/INIT/INIT_series.html" class="image featured"><img src="posts/INIT/distortionCONT/INIT_DIST_RENDER.png" alt="" /></a>
 								</div>
 								<p> 
 									La serie INIT, marca el inicio del proyecto, realizando una primera incursión en el mundo
