--- a/index.html
+++ b/index.html
@@ -23,42 +23,47 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<h1><a href="index.html">edderVOLT</a></h1>
-						<nav class="links">
-							<ul>
-								<li><a href="subjects/subjAUDIO.html">AUDIO</a></li>
-								<li><a href="subjects/subjMEDICION.html">MEDICIÓN</a></li>
-								<li><a href="subjects/subjUAV.html">UAV</a></li>
-							</ul>
-						</nav>
-						<nav class="main">
-							<ul>
-								<li class="search">
-									<a class="fa-search" href="#search">Search</a>
-									<form id="search" method="get" action="#">
-										<input type="text" name="query" placeholder="Search" />
-									</form>
-								</li>
-								<!--
-								<li class="menu">
-									<a class="fa-bars" href="#menu">Menu</a>
-								</li>
-								-->
-							</ul>
-						</nav>
-					</header>
+				<header id="header">
+					<h1><a href="../../index.html">edderVOLT</a></h1>
+					<nav class="links">
+						<ul>
+							<li><a href="subjects/subjAUDIO.html">AUDIO</a></li>
+							<li><a href="subjects/subjMEDICION.html">MEDICIÓN</a></li>
+							<li><a href="subjects/subjUAV.html">UAV</a></li>
+						</ul>
+					</nav>
+					<nav class="main">
+						<ul>
+							<li class="menu">
+								<a class="fa-bars" href="#menu">Menu</a>
+							</li>
+						</ul>
+					</nav>
+				</header>
 
 				<!-- Menu -->
-					<section id="menu">
-
-						<!-- Search -->
-							<section>
-								<form class="search" method="get" action="#">
-									<input type="text" name="query" placeholder="Search" />
-								</form>
-							</section>
-					</section>
+				<section id="menu">
+						<!-- Links -->
+						<section>
+							<ul class="links">
+								<li>
+									<a href="subjects/subjAUDIO.html">
+										<h3>AUDIO</h3>
+									</a>
+								</li>
+								<li>
+									<a href="subjects/subjMEDICION.html">
+										<h3>MEDICIÓN</h3>
+									</a>
+								</li>
+								<li>
+									<a href="subjects/subjUAV.html">
+										<h3>UAV</h3>
+									</a>
+								</li>
+							</ul>
+						</section>
+				</section>
 
 				<!-- Main -->
 					<div id="main">
