Pagina INIT listagit status

--- a/subjects/subjMEDICION.html
+++ b/subjects/subjMEDICION.html
@@ -91,7 +91,7 @@
 								<div class="mini-posts">
 										<article class="mini-post">
 											<header>
-												<h3><a href="../posts/PowerLOG/powerLOG.html">Power logger </a></h3>
+												<h3><a href="#">Power logger </a></h3>
 												<left>
 													<p>MEDICIÓN</p>
 												</left>
