Agregando actualización de errores 1

--- a/subjects/subjAUDIO.html
+++ b/subjects/subjAUDIO.html
@@ -71,19 +71,13 @@
 								</header>
 								<span class="image featured"><img src="images\cBOARD\cBOARD_prot1.png" alt="" /></span>
 								<p>
-									La iniciativa tiene como uno de sus enfoques principales los sistemas de audio. En esta página, 
-									se recopilan y presentan los diferentes proyectos que se han llevado a cabo en el àrea, abarcando una amplia 
-									gama de aplicaciones, principalmente aquellas destinadas a propósitos de la industria musical,
-									como la síntesis de sonido o la creación de sets en vivo. 
-									Cada proyecto refleja un compromiso con el arte, la ingeniería, y el desarrollo tecnológico.
-								</p>
-								<p>
-									Los alcances del desarrollo en esta área involucran tanto el diseño, como prototipado 
-									y testeo de diversos dispositivos, entre estos, amplificadores, pedales de guitarra, 
-									controladores MIDI, etc.
-								</p>
+									Parte de la iniciativa de esta página se centra en los sistemas de audio,
+									recopilando proyectos desarrollados en el área, 
+									desde la síntesis de sonido hasta la creación de sets en vivo, con un fuerte compromiso 
+									con el arte, la ingeniería y el desarrollo tecnológico. Los proyectos abarcan el diseño, 
+									prototipado y testeo de dispositivos como amplificadores, pedales de guitarra y controladores MIDI.
+								</p>							
 					</div>
-					
 					<!-- Sidebar -->
 					<section id="sidebar">
 						
