--- a/subjects/subjUAV.html
+++ b/subjects/subjUAV.html
@@ -72,9 +72,9 @@
 								<span class="image featured"><img src="images\cBOARD\cBOARD_prot1.png" alt="" /></span>
 								<p>
 
-									Una parte significativa de los esfuerzos de la iniciativa se centran en el diseño, desarrollo y 
+									Una parte de los esfuerzos de la iniciativa se centrarán, en un futuro cercano, en el diseño, desarrollo y 
 									despliegue de sistemas de robótica aérea, que pueden incluir drones o UAVs de ala fija, 
-									para inicialmente propósitos deportivos o recreativos.
+									para propósitos deportivos o recreativos.
 								</p>
 					</div>
 					
