--- a/subjects/subjMEDICION.html
+++ b/subjects/subjMEDICION.html
@@ -9,6 +9,7 @@
 		<title>edderVOLT</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta property="og:image" content="images/logo.jpg">
 		<style>
 			/* Estilos para el encabezado */
 			.headerx {
