--- a/subjects/subjAUDIO.html
+++ b/subjects/subjAUDIO.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>edderVOLT</title>
+		<title>edderDESIGN</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<style>
@@ -43,7 +43,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<h1><a href="../index.html">edderVOLT</a></h1>
+					<h1><a href="../index.html">edderDESIGN</a></h1>
 					<nav class="links">
 						<ul>
 							<li><a href="../subjects/subjAUDIO.html">AUDIO</a></li>
@@ -125,7 +125,7 @@
 							<li><a href="https://github.com/BrunoEdPerezS" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="curriculum.html" class="icon solid fa-rss"><span class="label">RSS</span></a></li>
 						</ul>
-						<p class="copyright">&copy; edderVOLT
+						<p class="copyright">&copy; edderDESIGN
 					</section>
 
 			</div>
